@@ -51,7 +51,7 @@ typedef struct commandHandler
 #define MAX_CONF_FW_CMD		5
 #define MAX_CONF_RD_CMD		1
 #define MAX_CONF_ACL_CMD	3
-#define MAX_CONF_ROUTER_CMD	4
+#define MAX_CONF_ROUTER_CMD	6
 
 static const unsigned short MAX_CMDS[MAX_CMD_TYPES] =
 {
@@ -85,7 +85,7 @@ cmdHdlr* masterCmd[MAX_CMD_TYPES];
 #define MAX_CONF_FW_NO_CMD 1
 #define MAX_CONF_RD_NO_CMD 0
 #define MAX_CONF_ACL_NO_CMD 2
-#define MAX_CONF_ROUTER_NO_CMD 3
+#define MAX_CONF_ROUTER_NO_CMD 5
 
 static const unsigned short MAX_NO_CMDS[MAX_CMD_TYPES] =
 {
