@@ -36,6 +36,10 @@ cmdCallback crouterCMD_RIP_redistrib(char* args);
 cmdCallback crouterCMD_RIP_noredistrib(char* args);
 cmdCallback crouterCMD_RIP_defaultinformation(char* args);
 cmdCallback crouterCMD_RIP_nodefaultinformation(char* args);
+cmdCallback crouterCMD_RIP_passive(char* args);
+cmdCallback crouterCMD_RIP_nopassive(char* args);
+cmdCallback crouterCMD_RIP_cost(char* args);
+cmdCallback crouterCMD_RIP_nocost(char* args);
 cmdCallback crouterCMD_RIP_splithorizon(char* _none);
 cmdCallback crouterCMD_RIP_nosplithorizon(char* _none);
 #endif
